--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -75,6 +75,22 @@
 	}
 }
 
+.link-search {
+	display: block;
+	width: 289px;
+	margin-bottom: 10px;
+	color: #008330;
+	font-size: 16px;
+	font-weight: 400;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	text-decoration: none;
+	@include hover() {
+		text-decoration: underline;
+		color: darken(#008330, 10);
+	}
+}
 
 // кнопка с заливкой
 .button {
