--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -117,6 +117,9 @@
 		}
 		&_xl {
 			height: 360px;
+			@include md-block {
+				height: 205px;
+			}
 		}
 		&_lg {
 			height: 300px;
@@ -772,15 +775,27 @@
 			width: 100%;
 			border-collapse: separate;
 			border-spacing: 0 30px;
+			@include lg-block {
+				border-spacing: 0 20px;
+				}
+			@include md-block {
+				border-spacing: 0 15px;
+			}
 		}
 		tr {
 			margin-bottom: 30px;
+			@include md-block {
+				margin-bottom: 15px;
+			}
 		}
 		td {
 			width: 25%;
 			color: #bcbdc0;
 			@include hover {
 				color: $basic-color;
+			}
+			@include md-block {
+				font-size: 10px;
 			}
 		}
 	}
@@ -1002,6 +1017,10 @@
 		//padding-left: 15px;
 		padding-right: 30px;
 		text-align: center;
+		@include md-block {
+			padding-right: 0;
+			padding-left: 15px;
+		}
 	}
 	&__imgbox {
 		min-width: 30px;
@@ -1009,6 +1028,11 @@
 		color: #d0d1d3;
 		text-align: center;
 		vertical-align: middle;
+		@include md-block {
+			min-width: auto;
+			max-width: 27px;
+			font-size: 27px;
+		}
 		i {
 			transition: 0.4s;
 			@include hover {
@@ -1030,10 +1054,18 @@
 			background-color: #F4F5F5;
 			border-color: #DDDEE0;
 		}
+		@include md-block {
+			padding: 0;
+			margin-bottom: 5px;
+		}
 	}
 	&__head {
 		margin-bottom: 5px;
 		@include clearfix;
+		@include md-block {
+			margin-bottom: 0;
+			font-size: 10px;
+		}
 	}
 	&__left {
 		float: left;
@@ -1054,6 +1086,9 @@
 		&:last-child {
 			margin-bottom: 0;
 		}
+		@include md-block {
+			font-size: 10px;
+		}
 	}
 	&__lnk {
 		color: inherit;
@@ -1061,11 +1096,15 @@
 		font-weight: inherit;
 		transition: color 0.2s;
 		font-family: "PT Serif", serif;
-		@include md-block {
-			font-size: 16px;
-		}
-		@include sm-block {
+		@include lg-block {
 			font-size: 12px;
+		}
+		@include md-block {
+			font-size: 11px;
+		}
+
+		@include sm-block {
+			font-size: 10px;
 		}
 		&.color-thin {
 			color: #a1a3a7;
@@ -1085,6 +1124,16 @@
 		}
 		&_small {
 			font-size: 14px;
+			line-height: 1.4;
+			@include lg-block {
+				font-size: 12px;
+			}
+			@include md-block {
+				font-size: 10px;
+			}
+			@include sm-block {
+				font-size: 8px;
+			}
 		}
 	}
 
