--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -121,6 +121,12 @@
 		font-size: 16px;
 		color: $basic-color;
 		font-weight: 400;
+		@include lg-block {
+			font-size: 12px;
+		}
+		@include md-block {
+			font-size: 8px;
+		}
 		h2 {
 			font-size: 24px;
 			font-family: "Roboto", sans-serif;
@@ -131,18 +137,39 @@
 			font-size: 22px;
 			font-family: "Roboto", sans-serif;
 			font-weight: inherit;
+			@include lg-block {
+				margin-bottom: 10px;
+				font-size: 18px;
+
+			}
+			@include md-block {
+				margin-bottom: 5px;
+				font-size: 11px;
+			}
 			.small {
 				display: block;
 				font-size: 12px;
 
+
 			}
 			.sub {
+				display: block;
 				font-size: 17px;
+				@include lg-block {
+					font-size: inherit;
+				}
 			}
 		}
 		p {
 			font-size: 17px;
 			margin-bottom: 5px;
+			@include lg-block {
+				font-size: 12px;
+				margin-bottom: 0;
+			}
+			@include md-block {
+				font-size: 8px;
+			}
 			.light {
 				color: #bcbdc0;
 			}
@@ -159,6 +186,9 @@
 				 font-size: 14px;
 				 color: #000000;
 				 line-height: 1.5;
+				 @include md-block {
+					 font-size: 8px;
+				 }
 			 }
 		}
 		&_thin {
