--- a/sass/_profile-info.scss
+++ b/sass/_profile-info.scss
@@ -6,6 +6,9 @@
 		td {
 			padding-right: 5px;
 			min-width: 235px;
+			@include md-block {
+				min-width: 122px;
+			}
 			&:first-child {
 				min-width: auto;
 			}
