--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -4,6 +4,9 @@
 	border-radius: 5px;
 	width: 100%;
 	border-spacing: 0px;
+	&-inn {
+		overflow-x: scroll;
+	}
 	thead {
 		border-radius: 5px 0 0 5px;
 		overflow: hidden;
